# fixbackend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  billing_flow.md  mypy.ini  noxfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  tox.ini  websocket_events.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  loadSecrets.sh  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_test.yml  docker_build.yml  force_deploy_to_dev.yml
.sandbox/: django_vscode_notebook.py  test.ipynb
auth/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py  views.py
fixbackend/: __main__.py  alembic_startup_utils.py  alembic_stratup_utils.py  all_models.py  app.py  app_dependencies.py  apps.py  base_model.py  config.py  db.py  dependencies.py  errors.py  httpx_extensions.py  ids.py  logging_context.py  main.py  models.py  schemas.py  sqlalechemy_extensions.py  sqs.py  streaming_response.py  types.py  urls.py  users.py  utils.py  views.py
fixbackend/analytics/: __init__.py  analytics_event_sender.py  domain_event_to_analytics.py  events.py  router.py
fixbackend/auth/: api_token_router.py  api_token_service.py  auth_backend.py  auth_router.py  cookie_redirect_transport.py  cookies.py  current_user_dependencies.py  db.py  depedencies.py  dependencies.py  jwt.py  models.py  oauth.py  oauth_clients.py  oauth_router.py  permission_checker.py  rate_limiter.py  redirect_to_spa.py  role_repository.py  router.py  schemas.py  transport.py  user_manager.py  user_repository.py  user_verifier.py  user_verifyer.py  users.py  users_router.py
fixbackend/billing/: billing_job.py  models.py  router.py  schemas.py  service.py
fixbackend/billing_information/: models.py  router.py  schemas.py  service.py
fixbackend/certificates/: ca_client.py  cert_store.py
fixbackend/cloud_accounts/: account_setup.py  azure_subscription_repo.py  azure_subscription_service.py  dependencies.py  gcp_service_account_repo.py  gcp_service_account_service.py  last_scan_repository.py  repository.py  router.py  schemas.py  service.py  service_impl.py
fixbackend/collect/: collect_queue.py
fixbackend/customer_support/: login_router.py  roles_router.py  router.py  scheduled_emails_router.py  user_workspaces_router.py  users_router.py  workspaces_router.py
fixbackend/db_handler/: graph_db_access.py
fixbackend/dispatcher/: __init__.py  collect_progress.py  dispatcher_service.py  next_run_repository.py
fixbackend/domain_events/: __init__.py  consumers.py  converter.py  dependencies.py  events.py  publisher.py  publisher_impl.py  sender.py  sender_impl.py  subscriber.py
fixbackend/events/: event_service.py  router.py  websocket_event_handler.py
fixbackend/fix_jwt/: __init__.py
fixbackend/graph_db/: dependencies.py  models.py  service.py
fixbackend/inventory/: inventory_client.py  inventory_router.py  inventory_schemas.py  inventory_service.py  router.py  schemas.py  test.ipynb
fixbackend/invoices/: billing_address_repository.py  models.py  router.py  schemas.py  service.py
fixbackend/keyvalue/: json_kv.py
fixbackend/metering/: __init__.py  metering_repository.py
fixbackend/middleware/: x_real_ip.py
fixbackend/notification/: email_service.py  messages.py  model.py  notification_provider_config_repo.py  notification_router.py  notification_service.py  output.html  router.py  schemas.py  (+4 more)
migrations/: README  README.md  env.py
static/: openapi-events.yaml
templates/: home.html
tools/: render_template.py
(+287 files in other folders)
