[tool.poetry]
name = "auth"
version = "0.1.0"
description = "An authentication compinent for the new security tool."
authors = ["Some Engineering Inc."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
social-auth-app-django = "^5.2.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
mypy = "^1.4.1"
django-allauth = "^0.54.0"
django-bootstrap-v5 = "^1.0.11"
django-organizations = "^2.1.0"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "auth.settings"