[tool.poetry]
name = "fixbackend"
version = "0.1.0"
description = ""
authors = ["Some Engineering Inc."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.1"}
aiomysql = "^0.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.11.3"
pydantic-settings = "^2.0.3"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
sqlalchemy-utils = "^0.41.1"
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fixbackend = "fixbackend.__main__:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "tests" ]

